# diary-ai

./: .gitignore  README.md  extracted_handwritten_text.txt  extracted_text.txt  prompt.py  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: rufflint.yml
diary_samples/dee/: 1577-06-19.txt  1577-06-27.txt  1577-11-03_Mortlake.txt  1577-11-20_Mortlake.txt  1577-12-01_Mortlake.txt  1578-04-28_Mortlake.txt  1578-08-05_Mortlake.txt  1578-08-15_Mortlake.txt  1578-09-01_Mortlake.txt  1578-09-25_Richmond.txt  1579-07-06_Richmond.txt  1579-07-13_Richmond.txt  1579-08-08_Oxford.txt  1579-08-26_Oxford.txt  1579-10-03_Oxford.txt  1579-11-25_Oxford.txt  1579-12-22_Oxford.txt  1580-02-23_Richmond.txt  1580-02-26_Richmond.txt  1580-03-08_Richmond.txt  1580-03-25_Richmond.txt  1580-07-06_Richmond.txt  1580-07-28_Richmond.txt  1580-08-03_Richmond.txt  1580-08-27_Oxford.txt  1580-09-06_Richmond.txt  1580-09-14_Richmond.txt  1580-10-03_Richmond.txt  1580-10-08_Richmond.txt  1580-11-06_Richmond.txt  1580-11-28_Richmond.txt  1582-02-25_Richmond.txt  1582-03-01_Mortlake.txt  1582-04-16_Mortlake.txt  1582-05-04_Mortlake.txt  1582-06-14_Mortlake.txt  1582-07-03_Mortlake.txt  1582-08-08_Mortlake.txt  1582-10-12_Mortlake.txt  1582-10-21_Mortlake.txt  (+111 more)
diary_samples/freya/: 2010-02-03T14:06:21.txt  2010-02-05T23:58:51.txt  2010-02-23T06:34:52.txt  2010-03-07T21:03:01.txt  2010-03-15T23:30:49.txt  2010-04-02T10:11:09.txt  2010-04-16T23:28:32.txt  (+293 more)
embeddings/: __init__.py  text_embedding.py
generation_utils/: __init__.py  diary_selection.py  execute_prompt.py  gemini_generation.py  ollama_generation.py  open_ai_generation.py
image_processing/: convert_image_to_text.py
import_data/: __init__.py  process_diaries.py
qdrant_utils/: __init__.py  collections.py  delete_collection_data.py  diary_collections.py  qdrant_repository.py
types/: __init__.py  diary_types.py  qdrant_types.py
(+5303 files in other folders)
