[project]
name = "dairy-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "zakibadawi",email = "mog5808@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client (>=1.14.2,<2.0.0)",
    "openai (>=1.81.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "google-genai (>=1.16.1,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "google-cloud-aiplatform (>=1.94.0,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "ollama (>=0.5.1,<0.6.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["migrations"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
